--- a/ProyectoTerceraAVA/app.properties
+++ b/ProyectoTerceraAVA/app.properties
@@ -1,9 +1,8 @@
-#Oracle DB Properties
-
+#Store new Access credentials
+#Mon May 10 17:13:11 CEST 2021
 ORACLE_DB_DRIVER_CLASS=oracle.jdbc.driver.OracleDriver
-
-ORACLE_DB_URL=jdbc:oracle:thin:@10.12.1.1:1539:xe
-
-ORACLE_DB_USERNAME=C##HOYOS
-
-ORACLE_DB_PASSWORD=Serasoba47!
+ORACLE_DB_URL=jdbc\:oracle\:thin\:@10.12.1.1\:1539\:xe
+ORACLE_DB_PASSWORD=g/rYr3+E+xFtVF5m/8VAzPPsv+KW/NEt
+IS_ORACLE_DB_USERNAME_ENCRYPTED=true
+ORACLE_DB_USERNAME=4NJ2xb55Brmdj4ldMR14AtwG4Agssb8l
+IS_ORACLE_DB_PASSWORD_ENCRYPTED=true
