--- a/ProyectoTerceraAVA/db.properties
+++ b/ProyectoTerceraAVA/db.properties
@@ -4,6 +4,7 @@ ORACLE_DB_DRIVER_CLASS=oracle.jdbc.driver.OracleDriver
 
 ORACLE_DB_URL=jdbc:oracle:thin:@10.12.1.1:1539:xe
 
-ORACLE_DB_USERNAME=C##HOYOS
 
-ORACLE_DB_PASSWORD=Serasoba47!
+ORACLE_DB_USERNAME=admin
+
+ORACLE_DB_PASSWORD=1234
