--- a/ProyectoTerceraAVA/pom.xml
+++ b/ProyectoTerceraAVA/pom.xml
@@ -27,5 +27,10 @@
 			<version>21.1.0.0</version>
 			<type>pom</type>
 		</dependency>
+		<dependency>
+			<groupId>org.jasypt</groupId>
+			<artifactId>jasypt</artifactId>
+			<version>1.9.3</version>
+		</dependency>
   </dependencies>
 </project>
