--- a/ProyectoTerceraAVA/app.properties
+++ b/ProyectoTerceraAVA/app.properties
@@ -1,8 +1,8 @@
-#Store new Access credentials
-#Fri May 21 17:19:16 CEST 2021
+#UTF-8
+#Mon May 24 18:28:04 CEST 2021
 ORACLE_DB_DRIVER_CLASS=oracle.jdbc.driver.OracleDriver
 ORACLE_DB_URL=jdbc\:oracle\:thin\:@10.12.0.198\:1539\:xe
-ORACLE_DB_PASSWORD=kEvBqhwgo1qFJH1ikCG7/7jP23mMwciT
 IS_ORACLE_DB_USERNAME_ENCRYPTED=true
-ORACLE_DB_USERNAME=ed52tzlEhHnpT9p1Og2ZsvD+Rz+hV84K
+ORACLE_DB_PASSWORD=vcgcdD8wVld1xQU2glKdFZUcdCaLiZYV
+ORACLE_DB_USERNAME=/tFce9QVy15UQwEQLzdbAGwKqqwCMRz8
 IS_ORACLE_DB_PASSWORD_ENCRYPTED=true
