--- a/ProyectoTerceraAVA/db.properties
+++ b/ProyectoTerceraAVA/db.properties
@@ -7,4 +7,8 @@ ORACLE_DB_URL=jdbc:oracle:thin:@10.12.1.1:1539:xe
 
 ORACLE_DB_USERNAME=admin
 
+IS_ORACLE_DB_USERNAME_ENCRYPTED = false;
+
 ORACLE_DB_PASSWORD=1234
+
+IS_ORACLE_DB_PASSWORD_ENCRYPTED = false;
